--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
                             <!--
                             <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Referanslar</a></li>
                             -->                            
-                            <li class="scroll-to-section"><a href="https://github.com/fatihdelice" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                            <li class="scroll-to-section"><a href="https://github.com/Yigidosoft/" target="_blank" rel="noopener noreferrer">GitHub</a></li>
                             <!-- DROPDOWN MENU 
                                 <li class="submenu">
                                 <a href="javascript:;">Drop Down</a>
