--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link href="assets/images/yglogo.png" rel="icon">
     <title>Yiğidosoft | Web Tasarım | Logo Tasarım | Web Yazılım</title>
-
+    <meta property="og:type" content="website">
+	<meta property="og:locale" content="tr_TR">
+    <meta property="og:site_name" content="Yiğidosoft">
+    
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
