--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li class="scroll-to-section"><a href="#welcome" class="menu-item">Ana Sayfa</a></li>
-                            <li class="scroll-to-section"><a href="#about" class="menu-item">Hizmetlerimiz</a></li>
+                            <li class="scroll-to-section"><a href="welcome" class="menu-item">Ana Sayfa</a></li>
+                            <li class="scroll-to-section"><a href="about" class="menu-item">Hizmetlerimiz</a></li>
                             <!--
                             <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Referanslar</a></li>
                             -->                            
@@ -104,7 +104,7 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
 
                             -->
                             
-                            <li class="scroll-to-section"><a href="#contact-us" class="menu-item">Teklif Al</a></li>
+                            <li class="scroll-to-section"><a href="contact-us" class="menu-item">Teklif Al</a></li>
                             
                         </ul>
                         <a class='menu-trigger'>
