--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
                             <li class="scroll-to-section"><a href="#about" class="menu-item">Hizmetlerimiz</a></li>
                             <!--
                             <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Referanslar</a></li>
-                            -->                            
-                            <li class="scroll-to-section"><a href="https://github.com/Yigidosoft/" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-                            <!-- DROPDOWN MENU 
+                                                       
+                            <li class="scroll-to-section"><a href="#" target="_blank" rel="noopener noreferrer">İletişim</a></li>
+                             DROPDOWN MENU 
                                 <li class="submenu">
                                 <a href="javascript:;">Drop Down</a>
                                 <ul>
