--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#welcome" class="menu-item">Ana Sayfa</a></li>
                             <li class="scroll-to-section"><a href="#about" class="menu-item">Hizmetlerimiz</a></li>
+                            <li class="scroll-to-section"><a href="https://discord.gg/t7qgzBRr2C" target="_blank">Discord</a></li>
                             <li class="scroll-to-section"><a href="https://fatihdelice.github.io/blog/" target="_blank">Blog</a></li>
                             <!--
                             <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Referanslar</a></li>
