--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
 
       gtag('config', 'UA-157349570-1');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1160689404715555"
+    crossorigin="anonymous"></script>
 
 
 </head>
