--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
                             <li><a href="https://bit.ly/3xjVIbc" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://bit.ly/3AEW6D4" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://bit.ly/3qSEZJI" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="https://bit.ly/3AB0JOK" target="_blank" rel="noopener noreferrer"><i class="fa fa-pinterest"></i></a></li>
+                            <li><a href="https://bit.ly/3r8EZHv" target="_blank" rel="noopener noreferrer"><i class="fa fa-youtube"></i></a></li>
                         </ul>  
                         <br/>
                         <a href="mailto:info@yigidosoft.com">
