--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#welcome" class="menu-item">Ana Sayfa</a></li>
                             <li class="scroll-to-section"><a href="#about" class="menu-item">Hizmetlerimiz</a></li>
+                            <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Referanslarımız</a></li>
                             <li class="scroll-to-section"><a href="https://discord.gg/t7qgzBRr2C" target="_blank">Discord</a></li>
                             <li class="scroll-to-section"><a href="https://www.yigidosoft.com/blog/">Blog</a></li>
                             <!--
@@ -231,53 +232,40 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
 
     <div class="right-image-decor"></div>
     <!-- ***** Testimonials Starts ***** -->
-    <!--
     <section class="section" id="testimonials">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
                     <div class="center-heading">
                         <h2>Referanslarımız</h2>
-                        <p>Daha önce çalıştığımız marka ve kuruluşlar.</p>
+                        <p>Daha önce yaptığımız çalışmalar.</p>
                     </div>
                 </div>
                 <div class="col-lg-10 col-md-12 col-sm-12 mobile-bottom-fix-big"
                     data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                     <div class="owl-carousel owl-theme">
                         <div class="item service-item">
-                            <div class="author">
-                                <i><img src="assets/images/testimonial-author-2.png" alt="Author One"></i>
-                            </div>
-                            <div class="testimonial-content">
-                                <ul class="stars">
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                </ul>
-                                <h4>Jonathan Smart</h4>
-                                <p>“Nullam hendrerit, elit a semper pharetra, ipsum nibh tristique tortor, in tempus
-                                    urna elit in mauris.”</p>
-                                <span>Besta CTO</span>
+                            <div class="testimonial-browser">
+                                <div class="title">
+                                    <span></span>
+                                </div>
+                                <div class="content" style="background-image: url(https://i.hizliresim.com/114nbq4.png)"></div>
                             </div>
                         </div>
                         <div class="item service-item">
-                            <div class="author">
-                                <i><img src="assets/images/testimonial-author-2.png" alt="Second Author"></i>
+                            <div class="testimonial-browser">
+                                <div class="title">
+                                    <span></span>
+                                </div>
+                                <div class="content" style="background-image: url(https://i.hizliresim.com/eevyrhz.jpg)"></div>
                             </div>
-                            <div class="testimonial-content">
-                                <ul class="stars">
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
-                                </ul>
-                                <h4>Martino Tino</h4>
-                                <p>“Morbi non mi luctus felis molestie scelerisque. In ac libero viverra, placerat est
-                                    interdum, rhoncus leo.”</p>
-                                <span>Web Analyst</span>
+                        </div>
+                        <div class="item service-item">
+                            <div class="testimonial-browser">
+                                <div class="title">
+                                    <span></span>
+                                </div>
+                                <div class="content" style="background-image: url(https://i.hizliresim.com/ergb0ua.png)"></div>
                             </div>
                         </div>
                     </div>
@@ -285,7 +273,6 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
             </div>
         </div>
     </section>
--->
     <!-- ***** Testimonials Ends ***** -->
 
 
