--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
                             -->
                             
                             <li class="scroll-to-section"><a href="#contact-us" class="menu-item">Teklif Al</a></li>
+                            <li class="scroll-to-section">
+                                <a href="/en">
+                                    <span class="iconify" style="font-size:25px; margin-top:-2px;" data-icon="twemoji:flag-for-flag-united-kingdom"></span>
+                                    <span class="iconify" style="font-size:25px; margin-top:-2px;" data-icon="twemoji:flag-for-flag-turkey"></span>
+                                </a>
+                            </li>
                             
                         </ul>
                         <a class='menu-trigger'>
@@ -338,5 +344,7 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
     <!-- Global Init -->
     <script src="assets/js/custom.js"></script>
 
+    <!-- Iconify  -->
+    <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
 </body>
 </html>
