--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
                         <div class="features-icon">
                             <img src="assets/images/test-3.png" alt="">
                             <h4>Web Tasarım</h4>
-                            <p>Müşterilerimizin ihtiyaçlarına ve gereksinimlerine göre özel ol..</p>
+                            <p>Müşterilerinizin ihtiyaçlarına ve gereksinimlerine göre özel ol..</p>
                         </div>
                     </div>
                 </div>
