--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
                             <li class="scroll-to-section"><a href="#welcome" class="menu-item">Ana Sayfa</a></li>
                             <li class="scroll-to-section"><a href="#about" class="menu-item">Hizmetlerimiz</a></li>
                             <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Referanslarımız</a></li>
-                            <li class="scroll-to-section"><a href="https://www.yigidosoft.com/discord.html" target="_blank">Discord</a></li>
+                            <li class="scroll-to-section"><a href="https://www.yigidosoft.com/discord" target="_blank">Discord</a></li>
                             <li class="scroll-to-section"><a href="https://www.yigidosoft.com/blog/">Blog</a></li>
                             <!--
                             <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Referanslar</a></li>
