--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
                     <div class="center-heading">
-                        <h2>Referanslarımız</h2>
-                        <p>Daha önce yaptığımız çalışmalar.</p>
+                        <h2>Projelerimiz</h2>
+                        <p>Yaptığımız örnek çalışmalar.</p>
                     </div>
                 </div>
                 <div class="col-lg-10 col-md-12 col-sm-12 mobile-bottom-fix-big"
