--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#welcome" class="menu-item">Ana Sayfa</a></li>
                             <li class="scroll-to-section"><a href="#about" class="menu-item">Hizmetlerimiz</a></li>
-                            <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Referanslarımız</a></li>
+                            <li class="scroll-to-section"><a href="#projects" class="menu-item">Projelerimiz</a></li>
                             <li class="scroll-to-section"><a href="https://www.yigidosoft.com/discord" target="_blank">Discord</a></li>
                             <li class="scroll-to-section"><a href="https://www.yigidosoft.com/blog/">Blog</a></li>
                             <!--
-                            <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Referanslar</a></li>
                                                        
                             <li class="scroll-to-section"><a href="#" target="_blank" rel="noopener noreferrer">İletişim</a></li>
                              DROPDOWN MENU 
@@ -237,8 +236,8 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
     <!-- ***** Features Big Item End ***** -->
 
     <div class="right-image-decor"></div>
-    <!-- ***** Testimonials Starts ***** -->
-    <section class="section" id="testimonials">
+    <!-- ***** projects Starts ***** -->
+    <section class="section" id="projects">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
@@ -279,7 +278,7 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
             </div>
         </div>
     </section>
-    <!-- ***** Testimonials Ends ***** -->
+    <!-- ***** projects Ends ***** -->
 
 
     <!-- ***** Footer Start ***** -->
