--- a/en/index.html
+++ b/en/index.html
@@ -308,9 +308,7 @@ License: MIT License
             <div class="row">
                 <div class="col-lg-12">
                     <div class="sub-footer">
-                        <p>Copyright &copy; 2021 Yiğidosoft
-
-                        | Designed by <a rel="nofollow" href="https://github.com/fatihdelice" target="_blank" rel="noopener noreferrer">Fatih Delice</a></p>
+                        <p>Copyright &copy; 2017 Yiğidosoft. Tüm Hakları Saklıdır.</p>
                     </div>
                 </div>
             </div>
