--- a/index.html
+++ b/index.html
@@ -315,9 +315,7 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
             <div class="row">
                 <div class="col-lg-12">
                     <div class="sub-footer">
-                        <p>Copyright &copy; 2021 Yiğidosoft
-
-                        | Designed by <a rel="nofollow" href="https://github.com/fatihdelice" target="_blank" rel="noopener noreferrer">Fatih Delice</a></p>
+                        <p>Copyright &copy; 2017 Yiğidosoft. Tüm Hakları Saklıdır.</p>
                     </div>
                 </div>
             </div>
