--- a/en/index.html
+++ b/en/index.html
@@ -308,7 +308,7 @@ License: MIT License
             <div class="row">
                 <div class="col-lg-12">
                     <div class="sub-footer">
-                        <p>Copyright &copy; 2017 Yiğidosoft. Tüm Hakları Saklıdır.</p>
+                        <p>Copyright &copy; 2017 Yiğidosoft. All Rights Reserved.</p>
                     </div>
                 </div>
             </div>
