--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keş
     <meta property="og:site_name" content="Yiğidosoft">
     
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/owl-carousel.css">
+    <link rel="stylesheet" type="text/css" href="https://www.yigidosoft.com/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://www.yigidosoft.com/assets/css/font-awesome.css">
+    <link rel="stylesheet" href="https://www.yigidosoft.com/assets/css/style.css">
+    <link rel="stylesheet" href="https://www.yigidosoft.com/assets/css/owl-carousel.css">
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157349570-1"></script>
