--- a/index.html
+++ b/index.html
@@ -5,12 +5,36 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dijital Dünya'ya ilk adımı Yiğidosoft ile atın. Kişisel markanızı Yiğidosoft ekibimizin tasarlayacağı web sitesi sayesinde Dijital Dünya'da öne çıkaracağız.
+    Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keşfedin.">
+    <meta name="keywords"
+        content="yigidosoft, web tasarım, logo tasarım, web yazılım, web sitesi, sivas web tasarım, web tasarım firması, seo, one page site tasarımı, kurumsal site tasarımı, mobil uyumlu site," />
+    <meta name="author" content="FatihDelice">
+    <meta name="referrer" content="origin">
+    <meta name="google-site-verification" content="so-WxlBBVL8anRjIkW-8oCwKqm00kbrbD0gH5HyuAMc" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
+        rel="stylesheet">
     <title>Yiğidosoft</title>
+    
+    <meta property="og:type" content="website">
+	<meta property="og:locale" content="tr_TR">
+    <meta property="og:site_name" content="Yiğidosoft">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="content/images/favicon.png">
     <link rel="stylesheet" type="text/css" href="content/css/style.css" />
     <script src="content/js/main.js"></script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157349570-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-157349570-1');
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1160689404715555"
+    crossorigin="anonymous"></script>
 </head>
 
 <body
