--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </a>
         </div>
         <div id="div2">
-            <a href="https://twitter.com/home?lang=tr" id="grayscale" class="column">
+            <a href="https://twitter.com/yigidosoft" id="grayscale" class="column">
                 <img class="logo" src="content/images/yg-twitter.png" alt="Yigidosoft-Twitter">
             </a>
         </div>
