--- a/production/index.html
+++ b/production/index.html
@@ -62,7 +62,9 @@
 <!-- Start PageLoader-->
 <div class="page-loader" id="page-loader">
     <div>
-        <div class="icon ion-spin"></div>
+        <div class="ion-spin">
+            <span class="iconify" data-icon="si-glyph:brush-and-pencil" data-width="45"></span>
+        </div>
     </div>
 </div>
 <!-- End PageLoader-->
