--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="tr">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Yiğidosoft</title>
@@ -321,12 +321,12 @@
                                         </div>
 
                                         <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-                                            <p>Yardıma mı ihtiyacınız var? Bizimle iletişime geçmeyi unutmayın. Ürünlerimiz ve hizmetlerimizle ilgili tüm sorularınız için memnuniyetle cevap vereceğiz</p>
-                                            <p>Ayrıca lütfen mesaj yazmaktan çekinmeyin. En kısa sürede sizinle iletişime geçeceğiz.</p>
+                                            <p>Yiğidosoft ile tasarlayacağınız internet sitesi projeniz ile sizde web sitesi kurun ve yükselişe eşlik edin!</p>
+                                            <p>Teklif almak ister misiniz? Size özel en uygun web site teklifini ihtiyaçlarınıza göre hazırlayalım.</p>
                                             <!-- Action button -->
                                             <div class="btns-action anim-4 mt-3">
                                                 <a class="btn btn-outline-white" href="#contact/message">
-                                                    <span class="txt">Mesaj Gönderin</span>
+                                                    <span class="txt">Şimdi Teklif Alın</span>
                                                     <i class="icon fa fa-long-arrow-right ml-2"></i>
                                                 </a>
                                             </div>
