--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                     <div class="row">
                         <div class="col-12 col-md-12">
                             <div class="title-desc anim-2 text-center">
-                                <p>Dijital Dünya'ya ilk adımı Yiğidosoft ile atın. Kişisel markanızı Yiğidosoft
-                                    ekibimizin tasarlayacağı web sitesi sayesinde Dijital Dünya'da öne çıkaracağız.
-                                    Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keşfedin.</p>
+                                <p>Dijital Dünya'ya ilk adımı Yiğidosoft ile atın. Yiğidosoft
+                                    ekibimizin tasarlayacağı logo tasarımları ve web sitesi tasarımları sayesinde kişisel markanızı Dijital Dünya'da öne çıkarmaya hazırız.
+                                    Hemen siz de mükemmel bir logo ve web sitesi sahibi olun ve acımasız başarıyı keşfedin.</p>
                             </div>
                         </div>
 
@@ -334,9 +334,7 @@
                                             </div>
 
                                             <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-                                                <p>Yiğidosoft ile tasarlayacağınız internet sitesi projeniz ile sizde
-                                                    web sitesi kurun ve yükselişe eşlik edin!</p>
-                                                <p>Teklif almak ister misiniz? Size özel en uygun web site teklifini
+                                                <p>Teklif almak ister misiniz? Size özel en uygun teklifimizi
                                                     ihtiyaçlarınıza göre hazırlayalım.</p>
                                                 <!-- Action button -->
                                                 <div class="btns-action anim-4 mt-3">
